# pyagent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_WIKI.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  build.ps1  build.sh  check.ps1  conftest.py  docker-compose.yml  fix_doc_encoding.py  merge_summary.md  package-lock.json  pyproject.toml  requirements.txt  test_browser.py  test_pyagent.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml  security.yml
.trae/memory/: 2026-03-25-create-project-structure.md  2026-03-25-create-unified-llm-client.md  2026-03-25-pyagent-config-setup.md  2026-03-27-environment-setup-and-fixes.md  2026-03-27-memory-system-optimization.md  2026-03-28-architecture-refactor.md  2026-03-28-collaboration-manager-implementation.md  2026-03-28-documentation-update-v0.4.0.md  2026-03-28-interaction-module-migration.md  2026-04-05-code-quality-check-script.md  2026-04-05-video-editor-command-system.md  INDEX.md  agents-md-update-2026-04-07.md  agents-release-checklist-update.md  build-package.md  code-review-2026-04-04.md  coding-agent-and-mobile-optimization.md  comprehensive-optimization-final.md  comprehensive-optimization-implementation.md  document-standards-check.md  documentation-simplification.md  documentation-update-v0.7.2.md  git-install-init.md  git-push-optimization-v0.9.9.md  project-optimization-analysis.md  standards-document-v2.md  standards-document.md  transition-commands-implementation.md  v0.7.0-kimi-adapter.md  v0.7.1-fixes.md  v0.8.0-calendar-migration.md  v0.8.0-distributed-storage.md  v0.8.12-document-editor-final.md  v0.8.12-document-editor-integration.md  v0.8.2-browser-automation-enhancement.md  v0.8.4-browser-events-system.md  v0.8.5-event-bus-system.md  video-element-commands.md  video-mobile-adapter.md  video-transition-utils.md  (+1 more)
.trae/rules/: memory-specification.md  rulers.md
OpenKiwi-master/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
OpenKiwi-master/app/: build.gradle.kts
OpenKiwi-master/companion-pc/: README.md  main.py  requirements.txt
OpenKiwi-master/docs/: ARCHITECTURE.md  RELEASE_NOTES_v3.2.1.md  RELEASE_NOTES_v3.2.2.md  RELEASE_NOTES_v3.2.8.md  RELEASE_NOTES_v3.2.9.md  RELEASING.md  SEARXNG_LOCAL.md
OpenKiwi-master/gradle/: libs.versions.toml
OpenKiwi-master/plugin-sdk/: build.gradle.kts
OpenKiwi-master/scripts/: release-github.ps1
android/: build_log.txt  build_log_full.txt  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
config/: browser.yaml  calendar.yaml  desktop.yaml  device_capabilities.yaml  domain.yaml  email.yaml  human_tasks.yaml  im_verification.yaml  intent.yaml  kimi.yaml  knowledge.yaml  llm_gateway.yaml  map.yaml  mcp.json  memory.yaml  mobile.yaml  models.yaml  pdf.yaml  persona.yaml  policies.yaml  storage.yaml  todo.yaml  voice.yaml  wechat.yaml
data/device/: device_id.json
data/human_tasks/: categories.json  tasks.json
data/knowledge/: CATEGORIES-TODO.md
data/test_calendar/: events.json
data/videos/: projects.json
docs/: api.md  architecture.md  best-practices.md  configuration.md  deployment.md  development.md  frontend.md  standards.md  testing.md  troubleshooting.md
docs/modules/: agent-system.md  browser-automation.md  calendar.md  chat-agent.md  clawhub.md  device-id.md  distributed-storage.md  document-editor.md  domain-system.md  email-client.md  execution-module.md  executor-agent.md  hot-reload.md  human-tasks.md  im-adapter.md  llm-client-v2.md  llm-client.md  llm-gateway.md  memory-system.md  mobile-support.md  pdf-processing.md  persona-system.md  todo-system.md  unified-tool.md  video-editor.md  voice-interaction.md  wechat-adapter.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  coding.py  financial.py  registry.py
src/browser/: __init__.py  actions.py  agent.py  browser_tools.py  cdp_session.py  controller.py  dom_enhanced.py  dom_parser.py  dom_serializer.py  event_bus.py  (+12 more)
tests/: conftest.py  test_agents.py  test_asr.py  test_browser_automation.py  test_calendar.py  test_collaboration.py  test_desktop.py  test_document.py  test_document_docx.py  test_document_ooxml.py  test_document_pdf.py  test_document_pptx.py  test_document_xlsx.py  test_domain.py  test_email.py  test_execution.py  test_human_tasks.py  test_humanized.py  test_intent.py  test_knowledge_tool.py  test_llm_gateway.py  test_map_tool.py  test_mcp.py  test_memory.py  test_person.py  test_phone_operation.py  test_planner.py  test_security.py  test_skills.py  test_storage.py  test_todo.py  test_tools.py  test_video.py  test_wechat.py
(+715 files in other folders)
