[project]
name = "pyagent"
version = "0.9.7"
description = "Python Agent - Intelligent Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "PyAgent Team"}
]
keywords = ["agent", "ai", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "peewee>=3.17.0",
    "aiosqlite>=0.19.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "mcp>=1.0.0",
    "pycryptodome>=3.20.0",
    "yfinance>=0.2.36",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/happy-everyday-everyweek/pyagent"
Documentation = "https://github.com/happy-everyday-everyweek/pyagent#readme"
Repository = "https://github.com/happy-everyday-everyweek/pyagent"
Issues = "https://github.com/happy-everyday-everyweek/pyagent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "pydocstyle>=6.3.0",
    "pre-commit>=3.7.0",
    "twine>=5.0.0",
]
browser = [
    "playwright>=1.40.0",
    "browser-use>=0.11.0",
]
voice = [
    "openai-whisper>=20231117",
    "edge-tts>=6.1.0",
    "azure-cognitiveservices-speech>=1.32.0",
]
pdf = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "camelot-py[cv]>=0.11.0",
    "opencv-python>=4.8.0",
]
local_model = [
    "llama-cpp-python>=0.2.50",
]
knowledge = [
    "whoosh>=2.7.4",
    "rank-bm25>=0.2.2",
]
all = [
    "pyagent[dev,browser,voice,pdf,local_model,knowledge]",
]

[project.scripts]
pyagent = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/**/py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long
    "PLR0913", # too many arguments
    "TRY003", # avoid long messages in exception
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "PTH123", # use Path.open
    "COM812", # trailing comma missing
    "ISC001", # single-line implicit string concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "PLR2004", "PT011"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]
skips = ["B101", "B311"]

[tool.pydocstyle]
convention = "google"
match = "(?!test_).*\\.py"
match-dir = "(?!tests|__pycache__|build|dist).*"
ignore = ["D100", "D104", "D107", "D203", "D213"]
